3589979, handle Long column type in expressions in SQL
Handle Long column type the same as Integer column type, creating a result
of type Long if one of the values in the expression is Long.

Added long literals, for example 10000L

Extend unit test TestSqlParser.testEvaluateLongOperations to check long literal.